--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 	:root {
 		interpolate-size: allow-keywords; /* for animating details open and close */
 	}
+	/* Box sizing rules */
+	*,
+	*::before,
+	*::after {
+	  box-sizing: border-box;
+	}
     button {font: inherit;}
 	body {		
 		font-family: Arial, Helvetica, sans-serif;		
@@ -67,6 +73,7 @@
 		summary { background-color: var(--colour-neutral-alt);
 			border-radius: var(--note-border-radius);
 			padding: 10px;
+			padding-left: 20px;
 			margin-left: calc(var(--summary-offset) * -1); /* to line up text with summary elem */
 			cursor:row-resize
 		}
@@ -75,7 +82,7 @@
 			min-width: calc(100% - var(--summary-width)); /* to force other details elements to a new line*/
 			margin-inline: auto;
 			summary {
-				max-width: var(--note-width);
+				max-width: calc(var(--note-width) + var(--note-padding-sides) * 2 + var(--note-border-thickness) * 2); /* faffing around here due to border box sizing css above*/
 				margin-inline: auto;
 				border: var(--note-border-thickness) solid var(--colour-contr);
 				border-bottom: 0; /* want to draw a box round details contents element too*/
@@ -91,15 +98,16 @@
 			overflow-y: clip;
 			max-width: var(--note-width); /* constrain text line length */
 			margin-inline: auto;
+			padding: 0px var(--note-padding-sides) 0px var(--note-padding-sides);
 		}
 		&[open]::details-content {
 			height: max-content;
-			padding: 0px var(--note-padding-sides) 10px var(--note-padding-sides);
 			border: var(--note-border-thickness) solid var(--colour-contr);
 			border-top: 0; /* want to draw a box round summary element too*/
 			border-radius: var(--note-border-radius);
 			border-top-right-radius: 0;
 			border-top-left-radius: 0;
+			padding-bottom: 10px;
 		}
 	}
 
