--- a/index.html
+++ b/index.html
@@ -527,8 +527,8 @@
 			
 			document.getElementById('tag_output').innerHTML = taxonomy_html_string 
 			
-			document.addEventListener("click", clickHandler);
-			document.addEventListener("touchstart", debouncedTouchHandler);
+			document.addEventListener("clickaddEventListener("pointerdown", clickHandler);
+			// document.addEventListener("touchstart", debouncedTouchHandler);
 			
 		}
 		
