--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
 			
 			document.getElementById('tag_output').innerHTML = taxonomy_html_string 
 			
-			document.addEventListener("clickaddEventListener("pointerdown", clickHandler);
+			document.addEventListener("pointerdown", clickHandler);
 			// document.addEventListener("touchstart", debouncedTouchHandler);
 			
 		}
